--- a/Assigments/prompt.html
+++ b/Assigments/prompt.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="solving.js">
-        
+    <script src="prompt.js">
+       
     </script>
 </body>
 </html>
